syntax = "proto3";

option go_package="github.com/bmviniciuss/tcc/card/src/grpc/pb";

package cards;

service Cards {
  rpc GenerateCard(CreateCardRequest) returns (FullCard) {}
  rpc GetCardByToken(GetCardByTokenRequest) returns (Card) {}
  rpc AuthorizePayment(AuhtorizePaymentRequest) returns (PaymentAuthorization) {}
}

message CreateCardRequest {
  string cardholder_name = 1;
  bool is_credit = 2;
  bool is_debit = 3;
}

message FullCard {
  string id = 1;
  string cardholder_name = 2;
  string number = 3;
  string cvv = 4;
  string token = 5;
  string masked_number = 6; 
  int64  expiration_year = 7;
  int64  expiration_month = 8;
  bool   active = 9;
  bool   is_credit = 10;
  bool   is_debit = 11;
}


message GetCardByTokenRequest {
  string token = 1;
}

message Card {
  string id = 1;
  string cardholder_name = 2;
  string token = 3;
  string masked_number = 4; 
  int64  expiration_year = 5;
  int64  expiration_month = 6;
  bool   active = 7;
  bool   is_credit = 8;
  bool   is_debit = 9;
}

message AuhtorizePaymentRequest {
  double amount = 1;
  string cardToken = 2;
  string paymentType = 3;
  string trasanctionDate = 4;
}

message PaymentAuthorization {
  string id = 1;
  double amount = 2;
  string status = 3;
  string transactionDate = 4;
  string createdAt = 5;
}
